refactoring Storage